# mujoco-tutorials

./: .gitignore  LESSONS_LEARNED.md  README.md  evaluate.py  m1013.xml  m1013_position.xml  m1013_torque.xml  monitor.py  pyproject.toml  robot_env.py  train.py  view.py
legacy/: m1013_position.xml  m1013_torque.xml  robot_env_position.py
meshes/m1013_stl/: MF1013_0_0.stl  MF1013_1_0.stl  MF1013_2_0.stl  MF1013_2_1.stl  MF1013_2_2.stl  MF1013_3_0.stl  MF1013_4_0.stl  MF1013_4_1.stl  MF1013_5_0.stl  MF1013_6_0.stl
reports/: LESSONS_LEARNED.md  position.md  retrospective.md  torque.md
